--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,21 @@
+
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="UTF-8">
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
+
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
+
     </body>
 </html>
